# accountaccess

./: .gitignore  Makefile  README.md
contract/: Cargo.toml
contract/src/: authorize_account.rs  main.rs
