[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false


[[bin]]
name = "authorize_account"
path = "src/authorize_account.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

